--- a/templates/login_middle.html
+++ b/templates/login_middle.html
@@ -12,7 +12,7 @@
             <form method="post" action="/middle/login">
                 <div class="mb-3">
                     <label for="admin_key" class="form-label">Clave Maestra</label>
-                    <input type="password" class="form-control" id="admin_key" name="admin_key" required>
+                    <input type="password" class="form-control" id="clave" name="clave" required>
                 </div>
                 <button type="submit" class="btn btn-dark">Ingresar</button>
             </form>
