--- a/templates/middle/registro_proveedor.html
+++ b/templates/middle/registro_proveedor.html
@@ -16,6 +16,11 @@
     </div>
 
     <div>
+        <label for="razon_social">Razón Social:</label><br>
+        <input type="text" id="razon_social" name="razon_social" required autocomplete="off" style="width: 250px;">
+    </div>
+
+    <div>
         <label for="rut">RUT:</label><br>
         <input type="text" id="rut" name="rut" required autocomplete="off" style="width: 250px;">
     </div>
@@ -28,6 +33,11 @@
     <div>
         <label for="clave">Contraseña:</label><br>
         <input type="password" id="clave" name="clave" required autocomplete="off" style="width: 250px;">
+    </div>
+
+    <div>
+        <label for="clave_sii">Clave SII:</label><br>
+        <input type="password" id="clave_sii" name="clave_sii" required autocomplete="off" style="width: 250px;">
     </div>
 
     <div style="margin-top: 10px;">
