--- a/templates/ver_oferta.html
+++ b/templates/ver_oferta.html
@@ -11,14 +11,28 @@
 </ul>
 
 <table class="table">
-  <tr><th>Tasa interés (%)</th><td>{{ '%.2f' % oferta.tasa_interes }}</td></tr>
-  <tr><th>Comisión flat</th><td>
-  <tr><th>Costo fondos (% mensual)</th><td>{{ '%.2f' % oferta.financiador.costo_fondos_mensual }}</td></tr>
-        {% if oferta.comision_flat %}
-            ${{ "{:,.0f}".format(oferta.comision_flat) }}
-        {% else %}-{% endif %}
-      </td></tr>
-  <tr><th>Días anticipación</th><td>{{ oferta.dias_anticipacion }}</td></tr>
+  <tr>
+    <th>Tasa interés (%)</th>
+    <td>{{ '%.2f' % oferta.tasa_interes }}</td>
+  </tr>
+  <tr>
+    <th>Comisión flat</th>
+    <td>
+      {% if oferta.comision_flat %}
+          ${{ "{:,.0f}".format(oferta.comision_flat) }}
+      {% else %}
+          -
+      {% endif %}
+    </td>
+  </tr>
+  <tr>
+    <th>Costo fondos (% mensual)</th>
+    <td>{{ '%.2f' % oferta.financiador.costo_fondos_mensual }}</td>
+  </tr>
+  <tr>
+    <th>Días anticipación</th>
+    <td>{{ oferta.dias_anticipacion }}</td>
+  </tr>
 </table>
 
 <a class="btn btn-primary" href="/financiador/editar-oferta/{{ oferta.id }}">Editar oferta</a>
